INCLUDE(FindPkgConfig)
PKG_SEARCH_MODULE(png REQUIRED libpng)

find_package(OpenGL REQUIRED)
find_package(GLUT REQUIRED)

SET(GL_SOURCES
  main.cpp
  Frame.cpp
  ../Vec.cpp
  )

SET(GL_HEADERS
)

INCLUDE_DIRECTORIES(..)

ADD_EXECUTABLE(${TARGET_GL} ${GL_SOURCES} ${GL_HEADERS})
TARGET_LINK_LIBRARIES(${TARGET_GL} ${SDL2_LIBRARIES} ${png_LIBRARIES} ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
